--- a/MessageExtension/Info.plist
+++ b/MessageExtension/Info.plist
@@ -27,5 +27,9 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.message-payload-provider</string>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>!!!</string>
+	<key>NSCameraUsageDescription</key>
+	<string>!!!</string>
 </dict>
 </plist>
