--- a/Message Extension/Supporting Files/Info.plist
+++ b/Message Extension/Supporting Files/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>2017.03.05.2</string>
+	<string>2017.03.10</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionMainStoryboard</key>
@@ -31,5 +31,7 @@
 	<string>!!!</string>
 	<key>NSCameraUsageDescription</key>
 	<string>!!!</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
