ignore review information

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+fastlane/metadata/review_information
 
 
 ### Xcode ###
