--- a/CHANGELOG.yml
+++ b/CHANGELOG.yml
@@ -1,7 +1,12 @@
 upcoming:
-- inital release
-- stickers listed in extension
-- stickers listed in app
-- edit sticker (image, clip bounds, mask type)
 
 releases:
+- version: 1.0.0
+  date: 2017-04-17
+  notes:
+  - inital release
+  - stickers listed in extension
+  - stickers listed in app
+  - edit sticker (image, clip bounds, mask type)
+
+
