--- a/CHANGELOG.yml
+++ b/CHANGELOG.yml
@@ -1,7 +1,11 @@
 upcoming:
-- build with iOS 12 and swift 4.2
 
 releases:
+- version: 1.1.0
+  date: 2019-03-15
+  notes:
+  - build with iOS 12 and swift 4.2
+
 - version: 1.0.1
   date: 2017-04-18
   notes:
@@ -14,6 +18,7 @@ releases:
   - stickers listed in extension
   - stickers listed in app
   - edit sticker (image, clip bounds, mask type)
+
 
 
 
