Add old scenes to project and temporary comment non working code

--- a/MessagesExtension/Supporting Files/Info.plist
+++ b/MessagesExtension/Supporting Files/Info.plist
@@ -27,7 +27,7 @@
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionMainStoryboard</key>
-		<string>Messages</string>
+		<string>MessagesApp</string>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.message-payload-provider</string>
 	</dict>
