Create standalone UI test target

--- a/PhotoStickers.xcodeproj/xcshareddata/xcschemes/MessagesExtension.xcscheme
+++ b/PhotoStickers.xcodeproj/xcshareddata/xcschemes/MessagesExtension.xcscheme
@@ -43,6 +43,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "196130D022DF0E6F00CE044F"
+               BuildableName = "UITests.xctest"
+               BlueprintName = "UITests"
+               ReferencedContainer = "container:PhotoStickers.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
