--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: objective-c
 os: osx
-osx_image: xcode10.1
+osx_image: xcode10.4
 cache:
   - cocoapods
   - bundler
 xcode_workspace: PhotoStickers.xcworkspace
-xcode_scheme: PhotoStickers
+xcode_scheme: MessagesExtension
 xcode_sdk: iphonesimulator
 env:
   global:
