--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: objective-c
 os: osx
-osx_image: xcode10.1
+osx_image: xcode10.3
 cache:
   - cocoapods
   - bundler
-xcode_workspace: PhotoStickers.xcworkspace
-xcode_scheme: PhotoStickers
-xcode_sdk: iphonesimulator
 env:
   global:
     - LC_CTYPE=en_US.UTF-8
@@ -16,4 +13,4 @@ install:
   - bundle install
   - bundle exec pod install --repo-update
 script:
-  - bundle exec fastlane test
+  - bundle exec fastlane test --verbose
