--- a/PhotoStickers.xcodeproj/xcshareddata/xcschemes/UITestHost.xcscheme
+++ b/PhotoStickers.xcodeproj/xcshareddata/xcschemes/UITestHost.xcscheme
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1030"
-   wasCreatedForAppExtension = "YES"
-   version = "2.0">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -15,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "19DE768A2253766700CF29AB"
-               BuildableName = "MessagesExtension.appex"
-               BlueprintName = "MessagesExtension"
-               ReferencedContainer = "container:PhotoStickers.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "19DE76802253766600CF29AB"
-               BuildableName = "PhotoStickers.app"
-               BlueprintName = "PhotoStickers"
+               BlueprintIdentifier = "19A9DFF822E0A165003EEF17"
+               BuildableName = "UITestHost.app"
+               BlueprintName = "UITestHost"
                ReferencedContainer = "container:PhotoStickers.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -43,13 +28,23 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "196130D022DF0E6F00CE044F"
+               BuildableName = "UITests.xctest"
+               BlueprintName = "UITests"
+               ReferencedContainer = "container:PhotoStickers.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "19DE768A2253766700CF29AB"
-            BuildableName = "MessagesExtension.appex"
-            BlueprintName = "MessagesExtension"
+            BlueprintIdentifier = "19A9DFF822E0A165003EEF17"
+            BuildableName = "UITestHost.app"
+            BlueprintName = "UITestHost"
             ReferencedContainer = "container:PhotoStickers.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -58,42 +53,24 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES"
-      launchAutomaticallySubstyle = "2">
-      <RemoteRunnable
-         runnableDebuggingMode = "1"
-         BundleIdentifier = "com.apple.MobileSMS">
+      allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "19DE768A2253766700CF29AB"
-            BuildableName = "MessagesExtension.appex"
-            BlueprintName = "MessagesExtension"
+            BlueprintIdentifier = "19A9DFF822E0A165003EEF17"
+            BuildableName = "UITestHost.app"
+            BlueprintName = "UITestHost"
             ReferencedContainer = "container:PhotoStickers.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "19DE768A2253766700CF29AB"
-            BuildableName = "MessagesExtension.appex"
-            BlueprintName = "MessagesExtension"
-            ReferencedContainer = "container:PhotoStickers.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "PREFILL_STICKERS"
-            value = "$(PREFILL_STICKERS)"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -102,15 +79,14 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES"
-      launchAutomaticallySubstyle = "2">
+      debugDocumentVersioning = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "19DE76802253766600CF29AB"
-            BuildableName = "PhotoStickers.app"
-            BlueprintName = "PhotoStickers"
+            BlueprintIdentifier = "19A9DFF822E0A165003EEF17"
+            BuildableName = "UITestHost.app"
+            BlueprintName = "UITestHost"
             ReferencedContainer = "container:PhotoStickers.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
