--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,7 @@ env:
   global:
     - LC_CTYPE=en_US.UTF-8
     - LANG=en_US.UTF-8
-install:
+before_install:
   - gem install bundler
-  - bundle install
-  - bundle exec pod install --repo-update
 script:
   - bundle exec fastlane test --verbose
